--- a/pages/detail.html
+++ b/pages/detail.html
@@ -24,11 +24,11 @@
 
         // Map 'from' to data file and back link
         const categoryMap = {
-            'gallery': { file: 'art.json', back: 'gallery.html' },
-            'photography': { file: 'photography.json', back: 'photography.html' },
-            'sculpting': { file: 'sculpting.json', back: 'sculpting.html' },
-            'projects': { file: 'projects.json', back: 'projects.html' },
-            'music': { file: 'music.json', back: 'music.html' }
+            'gallery': { file: 'art.json', back: 'index.html' },
+            'photography': { file: 'photography.json', back: 'index.html' },
+            'sculpting': { file: 'sculpting.json', back: 'index.html' },
+            'projects': { file: 'projects.json', back: 'index.html' },
+            'music': { file: 'music.json', back: 'index.html' }
         };
 
         const category = categoryMap[from];
