--- a/index.html
+++ b/index.html
@@ -114,15 +114,29 @@
             </main>
         </div>
 
-        <footer class="footer">
-            <div class="footer-social">
-                <a href="https://github.com/mtldev514" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+        <footer class="footer-terminal">
+            <div class="terminal-window">
+                <div class="terminal-titlebar">
+                    <div class="terminal-titlebar-btns">
+                        <span class="terminal-tbtn terminal-tbtn-close"></span>
+                        <span class="terminal-tbtn terminal-tbtn-min"></span>
+                        <span class="terminal-tbtn terminal-tbtn-max"></span>
+                    </div>
+                    <span class="terminal-titlebar-text">alex@mtl:~</span>
+                </div>
+                <div class="terminal-body">
+                    <div class="terminal-line"><span class="terminal-prompt">$</span> whoami</div>
+                    <div class="terminal-output" data-i18n="footer_copy">&copy; 2026 Alex. Hand-made in Montreal.</div>
+                    <div class="terminal-line"><span class="terminal-prompt">$</span> cat stack.conf</div>
+                    <div class="terminal-output" data-i18n="footer_browser">Guaranteed heavy-framework free. Best viewed with coffee.</div>
+                    <div class="terminal-line"><span class="terminal-prompt">$</span> git remote -v</div>
+                    <div class="terminal-output terminal-links">
+                        <a href="https://github.com/mtldev514" target="_blank" title="GitHub"><i class="fa fa-github"></i> github</a>
+                        <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i> linkedin</a>
+                    </div>
+                    <div class="terminal-line"><span class="terminal-prompt">$</span> uptime &mdash; <span class="terminal-dim"><span data-i18n="footer_last_updated">Last update:</span> 10 Feb 2026 | <span data-i18n="footer_visitors">Visits:</span> <span class="visitor-counter">000427</span></span> <span class="terminal-cursor">█</span></div>
+                </div>
             </div>
-            <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
-            <p data-i18n="footer_browser">Best viewed in Netscape Navigator or Internet Explorer 6.0</p>
-            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
-            <p><span data-i18n="footer_visitors">Visitors:</span> <span class="visitor-counter">000427</span></p>
         </footer>
     </div>
 </body>
