--- a/index.html
+++ b/index.html
@@ -76,15 +76,19 @@
                         <span class="winamp-grip"></span>
                     </div>
                     <div class="winamp-display">
+                        <div class="winamp-time-row">
+                            <span class="winamp-time" id="winamp-time">00:00</span>
+                            <span class="winamp-time-sep">/</span>
+                            <span class="winamp-duration" id="winamp-duration">00:00</span>
+                        </div>
+                        <div class="winamp-ticker">
+                            <marquee behavior="scroll" direction="left" scrollamount="2" class="radio-track-name">Alex's Radio - Winamp 2.91</marquee>
+                        </div>
                         <div class="winamp-viz" id="winamp-viz"></div>
                         <div class="winamp-info">
                             <div class="winamp-bitrate"><span class="winamp-kbps">192</span>kbps</div>
                             <div class="winamp-freq"><span class="winamp-khz">44</span>kHz</div>
                         </div>
-                        <div class="winamp-ticker">
-                            <marquee behavior="scroll" direction="left" scrollamount="2" class="radio-track-name">Alex's Radio - Winamp 2.91</marquee>
-                        </div>
-                        <div class="winamp-time" id="winamp-time">00:00</div>
                     </div>
                     <div class="winamp-transport">
                         <button class="winamp-btn radio-prev" title="Previous"><i class="fa fa-step-backward"></i></button>
