--- a/pages/detail.html
+++ b/pages/detail.html
@@ -66,7 +66,7 @@
             if (isProject) {
                 visibilityBadge = item.visibility === 'private'
                     ? `<span class="detail-badge detail-badge-private">🔒 ${t('detail_private', 'Private')}</span>`
-                    : `<span class="detail-badge detail-badge-public">🔓 ${t('detail_public', 'Public')}</span>`;
+                    : `<span class="detail-badge detail-badge-public">🌍 ${t('detail_public', 'Public')}</span>`;
             }
 
             let html = `<div class="detail-page">`;
