--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <span class="winamp-duration" id="winamp-duration">00:00</span>
                         </div>
                         <div class="winamp-ticker">
-                            <marquee behavior="scroll" direction="left" scrollamount="2" class="radio-track-name">Alex's Radio - Winamp 2.91</marquee>
+                            <span class="radio-track-name">Alex's Radio - Winamp 2.91</span>
                         </div>
                         <div class="winamp-viz" id="winamp-viz"></div>
                         <div class="winamp-info">
