--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="header_title">Alex's Art Portfolio - Welcome to my World!</title>
+    <title data-i18n="header_title">alex a montreal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,7 +58,7 @@
                     <div class="theme-option" onclick="themes.changeTheme('naples')"><span class="theme-icon">☀️</span> Naples Yellow</div>
                 </div>
             </div>
-            <h1 id="page-title" data-i18n="header_title">Alex's Artistic Portfolio</h1>
+            <h1 id="page-title" data-i18n="header_title">alex a montreal</h1>
         </header>
 
         <div class="marquee-container">
@@ -143,7 +143,7 @@
                     <span class="terminal-titlebar-text">alex@mtl:~</span>
                 </div>
                 <div class="terminal-body">
-                    <div class="terminal-line"><span class="terminal-prompt">$</span> <span data-i18n="footer_copy">&copy; 2026 Alex</span> &mdash; <a href="https://github.com/mtldev514" target="_blank" title="GitHub"><i class="fa fa-github"></i> github</a> · <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i> linkedin</a> &mdash; <span class="terminal-dim"><span data-i18n="footer_visitors">Visits:</span> <span class="visitor-counter">......</span></span> <span class="terminal-cursor">█</span></div>
+                    <div class="terminal-line"><span class="terminal-prompt">$</span> <span data-i18n="footer_copy">&copy; 2026 alex a montreal</span> &mdash; <a href="https://github.com/mtldev514" target="_blank" title="GitHub"><i class="fa fa-github"></i> github</a> · <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i> linkedin</a> &mdash; <span class="terminal-dim"><span data-i18n="footer_visitors">Visits:</span> <span class="visitor-counter">......</span></span> <span class="terminal-cursor">█</span></div>
                 </div>
             </div>
         </footer>
