--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     <div class="theme-option" onclick="themes.changeTheme('jr16')"><span class="theme-icon">🌿</span> JR-16</div>
                     <div class="theme-option" onclick="themes.changeTheme('ambre')"><span class="theme-icon">🔥</span> Ambre Chaud</div>
                     <div class="theme-option" onclick="themes.changeTheme('naples')"><span class="theme-icon">☀️</span> Naples Yellow</div>
+                    <div class="theme-option" onclick="themes.changeTheme('beton')"><span class="theme-icon">🌫️</span> Béton</div>
+                    <div class="theme-option" onclick="themes.changeTheme('ciment')"><span class="theme-icon">🪨</span> Ciment</div>
                 </div>
             </div>
             <h1 id="page-title" data-i18n="header_title">alex a montreal</h1>
